--- a/packages/planner/index.html
+++ b/packages/planner/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1a1a2e" />
-    <title>Tournament Planner</title>
+    <title>Plan Tournament — Create & Share Brackets | PadelDay</title>
+    <meta name="description" content="Plan padel and racket sport tournaments. Create brackets, share join links, manage player registrations. Free online tournament planner.">
+    <link rel="canonical" href="https://padelday.net/plan">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://padelday.net/plan">
+    <meta property="og:title" content="Plan Tournament — Create & Share Brackets | PadelDay">
+    <meta property="og:description" content="Plan padel and racket sport tournaments. Create brackets, share join links, manage player registrations. Free online tournament planner.">
+    <meta property="og:site_name" content="PadelDay">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Plan Tournament — Create & Share Brackets | PadelDay">
+    <meta name="twitter:description" content="Plan padel and racket sport tournaments. Create brackets, share join links, manage player registrations. Free online tournament planner.">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
