--- a/packages/runner/index.html
+++ b/packages/runner/index.html
@@ -8,7 +8,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
-    <title>Tournament Manager</title>
+    <title>Run Tournament — Live Scores & Standings | PadelDay</title>
+    <meta name="description" content="Run padel and racket sport tournaments on your phone. Score matches in real time, view live standings, americano and mexicano formats. Free and works offline.">
+    <link rel="canonical" href="https://padelday.net/play">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://padelday.net/play">
+    <meta property="og:title" content="Run Tournament — Live Scores & Standings | PadelDay">
+    <meta property="og:description" content="Run padel and racket sport tournaments on your phone. Score matches in real time, view live standings. Free and works offline.">
+    <meta property="og:site_name" content="PadelDay">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Run Tournament — Live Scores & Standings | PadelDay">
+    <meta name="twitter:description" content="Run padel and racket sport tournaments on your phone. Score matches in real time, view live standings. Free and works offline.">
   </head>
   <body>
     <div id="root"></div>
