--- a/packages/planner/index.html
+++ b/packages/planner/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1a1a2e" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Plan Tournament — Create & Share Brackets | PadelDay</title>
     <meta name="description" content="Plan padel and racket sport tournaments. Create brackets, share join links, manage player registrations. Free online tournament planner.">
     <link rel="canonical" href="https://padelday.net/plan">
