users on iOS Safari should see "Add to Home Screen" in the Share menu

--- a/packages/runner/index.html
+++ b/packages/runner/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
+    <link rel="icon" type="image/svg+xml" href="/play/favicon.svg" />
+    <link rel="apple-touch-icon" href="/play/apple-touch-icon-180x180.png" />
     <title>Run Tournament — Live Scores & Standings | PadelDay</title>
     <meta name="description" content="Run padel and racket sport tournaments on your phone. Score matches in real time, view live standings, americano and mexicano formats. Free and works offline.">
     <link rel="canonical" href="https://padelday.net/play">
