--- a/packages/runner/index.html
+++ b/packages/runner/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="PadelDay" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" type="image/svg+xml" href="/play/favicon.svg" />
     <link rel="apple-touch-icon" href="/play/apple-touch-icon-180x180.png" />
     <title>Run Tournament — Live Scores & Standings | PadelDay</title>
